adding a tag in nav

--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class="page-body">
-        <table>
+        <table class="data-table">
             <thead>
                 <tr>
                     <th>LoginID</th>
