--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -24,51 +24,59 @@
         </div>
 
         <ul style="padding-left:0 !important;" class="nav-menu">
-            <li class="">
+            <li class="active">
                 <a href="@Url.Action("Index", "Home")">
-                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px"
-                        fill="#000000">
-                        <path
-                            d="M520-600v-240h320v240H520ZM120-440v-400h320v400H120Zm400 320v-400h320v400H520Zm-400 0v-240h320v240H120Zm80-400h160v-240H200v240Zm400 320h160v-240H600v240Zm0-480h160v-80H600v80ZM200-200h160v-80H200v80Zm160-320Zm240-160Zm0 240ZM360-280Z" />
-                    </svg>
-                    <span>Dashboard</span>
+                    <i class="fas fa-tachometer-alt"></i>
+                    <span>Databoard</span>
                 </a>
             </li>
-            <li class="active">
-                <i class="fas fa-tachometer-alt"></i>
-                <span>Databoard</span>
+            <li>
+                <a href="@Url.Action("Index", "Clients")">
+                    <i class="fas fa-users"></i>
+                    <span>Clients</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-users"></i>
-                <span>Clients</span>
+                <a href="@Url.Action("Index", "Transaction")">
+                    <i class="fas fa-exchange-alt"></i>
+                    <span>Transactions</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-exchange-alt"></i>
-                <span>Transactions</span>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-tools"></i>
+                    <span>Tools</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-tools"></i>
-                <span>Tools</span>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-bell"></i>
+                    <span>Remainders</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-bell"></i>
-                <span>Remainders</span>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-star"></i>
+                    <span>Leads</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-star"></i>
-                <span>Leads</span>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-clipboard-list"></i>
+                    <span>Requests</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-clipboard-list"></i>
-                <span>Requests</span>
+                <a href="@Url.Action("Index", "User")">
+                    <i class="fas fa-cog"></i>
+                    <span>Settings</span>
+                </a>
             </li>
             <li>
-                <i class="fas fa-cog"></i>
-                <span>Settings</span>
-            </li>
-            <li>
-                <i class="fas fa-chart-bar"></i>
-                <span>Reports</span>
+                <a href="@Url.Action("Index", "Home")">
+                    <i class="fas fa-chart-bar"></i>
+                    <span>Reports</span>
+                </a>
             </li>
         </ul>
     </nav>
